# sys-prog

./: .gitignore
asm/: Makefile
asm/lab1/: 1.asm  2.asm
asm/lab2/: 1.asm  2.asm  3.asm
asm/lab3/: 1.asm  2.asm
asm/lab4/: main.asm
asm/lab5/: 1.asm
asm/lab6/: main.asm
code/cp/: .gitignore  Cargo.toml  Makefile
code/cp/src/: base.rs  gantt.rs  gantt_visual.rs  lib.rs  rr_scheduler.rs  samples.rs  simulation.rs
code/lab1/: CMakeLists.txt  Makefile
code/lab1/src/: base.c  base.h  main.c  son.c
code/lab2/: CMakeLists.txt  Makefile
code/lab2/src/: buffer.h  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h  utils.cpp  utils.h
code/lab3/: CMakeLists.txt  Makefile  test.sh
code/lab3/src/: main.c
code/lab4/: CMakeLists.txt  Makefile
code/lab4/src/: manager.cpp  process1.cpp  process2.cpp  process3.cpp  process4.cpp
code/lab5/: CMakeLists.txt  Makefile
code/lab5/src/: manager.cpp  process1.cpp  process2.cpp  process3.cpp  process4.cpp
