[package]
name = "cp"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3"
ratatui = "0.28"
crossterm = "0.28"

[features]
default = []

[[bin]]
name = "visual"
path = "src/bin/visual.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "stats"
path = "src/bin/statistic.rs"
